# MGL

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  meson.build
include/: MGLContext.h  MGLRenderer.h  error.h  glm_context.h  glm_dispatch.h  glm_limits.h  glm_params.h  gltypes.h  hash_table.h  mgl.h  pixel_utils.h  utils.h
include/GL/: glcorearb.h
src/: MGLRenderer.m  MGLTextures.m  buffers.c  buffers.h  compute.c  draw_buffers.c  error.c  fence.c  framebuffers.c  get.c  gl_core.c  glm_context.c  glm_params.c  hash_table.c  mgl_funcs_to_be_implemented.c  non_core_unimplemented.c  pixel_utils.c  program.c  rendering.c  samplers.c  shaders.c  state.c  tex_param.c  textures.c  uniforms.c  utils.c  vertex_arrays.c  vertex_buffers.c
test/: gtest_main.cpp  main.cpp
